--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": "^7.1.3",
         "google/analytics-data": "^0.9.4",
-        "illuminate/contracts": "^5.7|^6.0",
+        "illuminate/contracts": "^5.7|^6.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
